scanner run for .NET for windows

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 # sonar scanner work folder
 **/.scannerwork/**
+
+# binaries
+**/bin/**
+
+# obj
+**/obj/**
+
+# sonarqube internals
+**/.sonarqube/**
